# Marker-Based-FastSlam

./: .gitignore  README.md
MATLAB_simulations/2D/: getMeasurement.m  moveParticle.m  slam.m
MATLAB_simulations/3D/: getMeasurement.asv  getMeasurement.m  moveParticle.m  resample.m  slam.asv  slam.m
MATLAB_simulations/known_data_association/2D/: Copy_of_slam.m  slam.m
MATLAB_simulations/known_data_association/3D/: Copy_of_slam.m  getMeasurement.m  slam.m
MATLAB_simulations/unknown_data_association/2D/: getMeasurement.m  moveParticle.m  slam.m
Micro-simulator/known_data_association/2D/: getMeasurement.m
Micro-simulator/known_data_association/3D/: moveParticle.m  resample.m
etc/calibration/: camerav2_1280x960_cal.yaml
etc/param_estimate_ws/devel/lib/pkgconfig/: alphabot2_camera.pc
marker_fastslam_ws/: .gitignore
marker_fastslam_ws/src/alphabot2-simulator/alphabot2_control/launch/: alphabot2_control_gazebo.launch
marker_fastslam_ws/src/alphabot2-simulator/alphabot2_pantilt/launch/: alphabot2_pantilt_gazebo.launch
marker_fastslam_ws/src/alphabot2-simulator/alphabot2_world/launch/: rviz.launch  spawn_robot.launch  spawn_world.launch  teste.launch
marker_fastslam_ws/src/alphabot2-simulator/alphabot2_world/robots/: Waveshare_Alphabot2.urdf  alphabot2.xacro
marker_fastslam_ws/src/fastslam/: CMakeLists.txt  package.xml
marker_fastslam_ws/src/fastslam/include/fastslam/: data_association.h  particle_filter.h  slam.h
marker_fastslam_ws/src/fastslam/launch/: slam.launch
marker_fastslam_ws/src/fastslam/src/: particle_filter.cpp  slam.cpp
marker_fastslam_ws/src/feature_extractor/: CMakeLists.txt  package.xml
marker_fastslam_ws/src/fiducials/aruco_detect/launch/: aruco_detect.launch  aruco_detect_gazebo.launch  aruco_detect_original.launch
marker_fastslam_ws/src/fiducials/aruco_detect/src/: aruco_detect.cpp
marker_fastslam_ws/src/web_control/: CMakeLists.txt  main.py  package.xml
marker_fastslam_ws/src/web_control/launch/: web_control.launch
param_estimate_ws/devel/: .catkin  .rosinstall  _setup_util.py
param_estimate_ws/devel/include/raspicam_node/: CameraConfig.h
param_estimate_ws/devel/lib/pkgconfig/: alphabot2_control.pc  alphabot2_pantilt.pc  alphabot2_sensors.pc  alphabot2_sensors_middleman.pc  parameters_est.pc
param_estimate_ws/devel/share/alphabot2_camera/cmake/: alphabot2_cameraConfig.cmake
param_estimate_ws/src/parameters_est/: CMakeLists.txt
param_estimate_ws/src/parameters_est/launch/: parameter_estimator.launch
zzzzz/param_estimate_ws/devel/: local_setup.sh
(+20 files in other folders)
