cmake_minimum_required(VERSION 3.0.2)
project(web_control)

find_package(catkin REQUIRED COMPONENTS
  rospy
  std_msgs
)

catkin_package(
 CATKIN_DEPENDS rospy std_msgs
)

include_directories(
  ${catkin_INCLUDE_DIRS}
)

catkin_install_python(PROGRAMS
  main.py
  AlphaBot.py
  PCA9685.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)

